--- a/welcome/src/components/career/career.css
+++ b/welcome/src/components/career/career.css
@@ -6,7 +6,7 @@
 .descriptionContainer {
     width:95%;
     margin: auto;
-    text-align: center;
+    
     margin-top:0%;
     border-radius: 10px;
     padding: 0%;
@@ -23,15 +23,35 @@
     color: #4169e1;
     font-weight: bold;
     font-family: "VogueLight";
+    text-align: center;
    
 }
 .flexArea {
- 
   display:flex;
-    justify-content: center;
+    justify-content: start;
+    overflow-x:auto;
+    min-width: 500px;
+}
+.flexAreaLogo {
+  display:flex;
+    justify-content: start;
+    overflow:hidden;
+    min-width: 500px;
+}
+.flexAreaText {
+  margin:auto;
+  margin-top:2%;
+  width:70%;
+  display:flex;
+    justify-content: start;
+}
+.flexAreaDescription {
+  margin-left:3%;
+  margin-top:5%;
+  width:95%;
 }
 .career {
-  width:30%;
+  min-width:29vw;
   margin:25px;
   margin-top:0%;
   border-radius: 15px;
@@ -42,7 +62,7 @@
   font-family: "VogueLight";
 }
 .logo {
-  width:30%;
+  min-width:29vw;
   margin:25px;
   margin-top:1%;
   text-align:center;
@@ -58,6 +78,7 @@
   width:90%;
   padding:7px;
 border-bottom: 1px solid #4169e1;
+text-align: center;
 }
 
 .description {
